--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,10 @@
     },
     "require-dev": {
         "php": "*",
-        "symfony/maker-bundle": "^1.38"
+        "symfony/debug-bundle": "6.0.*",
+        "symfony/maker-bundle": "^1.38",
+        "symfony/stopwatch": "6.0.*",
+        "symfony/web-profiler-bundle": "6.0.*"
     },
     "config": {
         "allow-plugins": {
