Integrated ckeditor form type

--- a/composer.json
+++ b/composer.json
@@ -11,22 +11,23 @@
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
-        "symfony/console": "6.0.*",
+        "friendsofsymfony/ckeditor-bundle": "^2.4",
+        "symfony/console": "*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
-        "symfony/form": "6.0.*",
-        "symfony/framework-bundle": "6.0.*",
+        "symfony/form": "*",
+        "symfony/framework-bundle": "*",
         "symfony/google-mailer": "6.0.*",
         "symfony/mailer": "6.0.*",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
-        "symfony/twig-bundle": "6.0.*",
+        "symfony/twig-bundle": "*",
         "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*",
         "symfonycasts/verify-email-bundle": "^1.10",
-        "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.12|^3.0"
+        "twig/extra-bundle": "*",
+        "twig/twig": "*"
     },
     "require-dev": {
         "php": "*",
@@ -68,7 +69,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "ckeditor:install": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -83,7 +85,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "6.0.*",
+            "require": "*",
             "docker": true
         }
     }
