--- a/composer.json
+++ b/composer.json
@@ -12,19 +12,23 @@
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
         "friendsofsymfony/ckeditor-bundle": "^2.4",
+        "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "*",
+        "symfony/doctrine-bridge": "*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
         "symfony/form": "*",
         "symfony/framework-bundle": "*",
         "symfony/google-mailer": "6.0.*",
         "symfony/mailer": "6.0.*",
+        "symfony/monolog-bundle": "^3.7",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
         "symfony/twig-bundle": "*",
         "symfony/validator": "6.0.*",
         "symfony/yaml": "6.0.*",
+        "symfonycasts/reset-password-bundle": "^1.13",
         "symfonycasts/verify-email-bundle": "^1.10",
         "twig/extra-bundle": "*",
         "twig/twig": "*"
