Added an admin side (unfinished) Added a simple frontend for viewing / creating topics. Implemented webpack encore Removed many unnecessary files Implemented symfony/ux-chartjs bundle to use charts Added datetime functions for dql (doctrine)

--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,12 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "beberlei/doctrineextensions": "^1.3",
         "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.6",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.11",
+        "easycorp/easyadmin-bundle": "^4.1",
         "friendsofsymfony/ckeditor-bundle": "^2.4",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "*",
@@ -26,15 +28,19 @@
         "symfony/runtime": "6.0.*",
         "symfony/security-bundle": "6.0.*",
         "symfony/twig-bundle": "*",
+        "symfony/ux-chartjs": "^2.1",
         "symfony/validator": "6.0.*",
+        "symfony/webpack-encore-bundle": "^1.14",
         "symfony/yaml": "6.0.*",
         "symfonycasts/reset-password-bundle": "^1.13",
         "symfonycasts/verify-email-bundle": "^1.10",
         "twig/extra-bundle": "*",
+        "twig/intl-extra": "^3.3",
         "twig/twig": "*"
     },
     "require-dev": {
         "php": "*",
+        "doctrine/doctrine-fixtures-bundle": "^3.4",
         "symfony/debug-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.38",
         "symfony/stopwatch": "6.0.*",
