--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,6 +37,9 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
+    role_hierarchy:
+        ROLE_SUPER_ADMIN: ROLE_ADMIN, ROLE_MODERATOR, ROLE_USER
+        ROLE_ADMIN: ROLE_MODERATOR, ROLE_USER
 
 when@test:
     security:
