--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "babdev/pagerfanta-bundle": "^3.6",
         "beberlei/doctrineextensions": "^1.3",
         "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.6",
@@ -14,6 +15,8 @@
         "doctrine/orm": "^2.11",
         "easycorp/easyadmin-bundle": "^4.1",
         "friendsofsymfony/ckeditor-bundle": "^2.4",
+        "pagerfanta/doctrine-orm-adapter": "^3.6",
+        "pagerfanta/twig": "^3.6",
         "sensio/framework-extra-bundle": "^6.2",
         "symfony/console": "*",
         "symfony/doctrine-bridge": "*",
