Added page to choose pagination and default pic

--- a/config/appconfig/config.yaml
+++ b/config/appconfig/config.yaml
@@ -1,4 +1,6 @@
 parameters:
     pagination:
-        app.topic.pages: 4
-        app.comment.pages: 2
+        app.topic.pages: 9
+        app.comment.pages: 14
+    default:
+        userimage: default_pic.png
