--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    upload_directory: '%kernel.project_dir%/public/'
+    defaults_directory: 'default/'
+    config_file: '%kernel.project_dir%/config/appconfig/config.yaml'
 
 services:
     # default configuration for services in *this* file
@@ -21,6 +24,10 @@ services:
             - '../src/Kernel.php'
 
     # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+        # please note that last definitions always *replace* previous ones
+    App\Service\FileUploader:
+            arguments:
+                $targetDirectory: '%upload_directory%'
+                $kernelDirectory: '%kernel.project_dir%'
 imports:
     - { resource: 'appconfig/config.yaml' }
