--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,16 @@
         "babdev/pagerfanta-bundle": "^3.6",
         "beberlei/doctrineextensions": "^1.3",
         "doctrine/annotations": "^1.13",
-        "doctrine/doctrine-bundle": "^2.6",
+        "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
-        "doctrine/orm": "^2.11",
+        "doctrine/orm": "^2.13",
         "easycorp/easyadmin-bundle": "^4.1",
         "friendsofsymfony/ckeditor-bundle": "^2.4",
         "pagerfanta/doctrine-orm-adapter": "^3.6",
         "pagerfanta/twig": "^3.6",
+        "predis/predis": "^2.0",
         "sensio/framework-extra-bundle": "^6.2",
+        "snc/redis-bundle": "^4.2",
         "symfony/console": "*",
         "symfony/doctrine-bridge": "*",
         "symfony/dotenv": "6.0.*",
