--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
     "require-dev": {
         "php": "*",
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "squizlabs/php_codesniffer": "^3.7",
         "symfony/debug-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.38",
         "symfony/stopwatch": "6.0.*",
