--- a/config/services.yaml
+++ b/config/services.yaml
@@ -32,5 +32,7 @@ services:
     App\Service\ConfigHandler:
             arguments:
                 $configPath: '%config_file%'
+    App\Service\PagerService:
+
 imports:
     - { resource: 'appconfig/config.yaml' }
