--- a/config/packages/vich_uploader.yaml
+++ b/config/packages/vich_uploader.yaml
@@ -7,4 +7,6 @@ vich_uploader:
             uri_prefix: /images/image
             upload_destination: '%kernel.project_dir%/public/images/image'
             namer: Vich\UploaderBundle\Naming\SmartUniqueNamer
-            inject_on_load: true
+            inject_on_load: false
+            delete_on_update: true
+            delete_on_remove: true
