discord and email notifications for exceptions AppFixtures.php Class to initialize demo application New Twig function to generate post links

--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,9 @@
         "friendsofsymfony/ckeditor-bundle": "^2.4",
         "pagerfanta/doctrine-orm-adapter": "^3.6",
         "pagerfanta/twig": "^3.6",
-        "predis/predis": "^2.0",
         "sensio/framework-extra-bundle": "^6.2",
-        "snc/redis-bundle": "^4.2",
         "symfony/console": "*",
+        "symfony/discord-notifier": "*",
         "symfony/doctrine-bridge": "*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^2",
