--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,11 +1,14 @@
 doctrine:
     dbal:
         url: '%env(resolve:DATABASE_URL)%'
-        logging: false
+        logging: true
         profiling: true
         # IMPORTANT: You MUST configure your server version,
         # either here or in the DATABASE_URL env var (see .env file)
         #server_version: '13'
+        mapping_types:
+            bit: boolean
+
     orm:
         second_level_cache:
             enabled: true
