--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -6,10 +6,28 @@ when@dev:
     monolog:
         handlers:
             main:
-                type: stream
+                type: fingers_crossed
                 path: "%kernel.logs_dir%/%kernel.environment%.log"
                 level: debug
                 channels: ["!event"]
+                # to also log 400 level errors (but not 404's):
+                # action_level: error
+                # excluded_http_codes: [404]
+                handler: deduplicated
+            deduplicated:
+                type: deduplication
+                handler: symfony_mailer
+            symfony_mailer:
+                type: symfony_mailer
+                time: 10
+                from_email: 'forum@carpour.com'
+                to_email: '%dev_emails%'
+                # or list of recipients
+                # to_email:   ['dev1@example.com', 'dev2@example.com', ...]
+                subject: 'An Error Occurred! %%message%%'
+                level: debug
+                formatter: monolog.formatter.html
+                content_type: text/html
             # uncomment to get logging in your browser
             # you may have to allow bigger header sizes in your Web server configuration
             #firephp:
@@ -18,10 +36,7 @@ when@dev:
             #chromephp:
             #    type: chromephp
             #    level: info
-            console:
-                type: console
-                process_psr_3_messages: false
-                channels: ["!event", "!doctrine", "!console"]
+
 
 when@test:
     monolog:
