--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -17,11 +17,11 @@ doctrine:
                 pool: doctrine.second_level_cache_pool
 
         dql:
-            datetime_functions: 
-                DATE_FORMAT: DoctrineExtensions\Query\Mysql\DateFormat
-                DAY: DoctrineExtensions\Query\Mysql\Day
-                MONTH: DoctrineExtensions\Query\Mysql\Month
-                YEAR: DoctrineExtensions\Query\Mysql\Year
+            datetime_functions:
+                DATE_FORMAT: DoctrineExtensions\Query\%env(DRIVER)%\DateFormat
+                DAY: DoctrineExtensions\Query\%env(DRIVER)%\Day
+                MONTH: DoctrineExtensions\Query\%env(DRIVER)%\Month
+                YEAR: DoctrineExtensions\Query\%env(DRIVER)%\Year
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore_number_aware
         auto_mapping: true
